# SimpleGraphPlotter

./: .anjuta_sym_db.db  .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README.rdoc  configure  configure.ac
.anjuta/session/: anjuta.session  dock-layout.xml
Debug/: Makefile  config.h  config.status  libtool
Debug/po/: Makefile  Makefile.in  POTFILES
Debug/src/: Makefile  plotter  simplegraphplotter
Debug/src/.deps/: function_list_controller.Po  main.Po  model_columns.Po  plot_area.Po  plot_drawingarea.Po
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
doc/: .gitignore  Makefile  parse-tree.tex  report.out  report.tex  syntax.tex  uml.dia  uml.eps
python_reference/: .gitignore  mproc.py  plot.py  queue.py
src/: .gitignore  Makefile  Makefile.am  Makefile.in  function.cc  function.h  function_list_controller.cc  function_list_controller.h  main.cc  math.cc  math.h  model_columns.cc  model_columns.h  plot_drawingarea.cc  plot_drawingarea.h  pmath.cc  pmath.h  simplegraphplotter.ui
src/parser/: Makefile  binary_operation.cpp  binary_operation.h  complex.h  constant.cpp  constant.h  iexpression.cpp  iexpression.h  iparser.h  parser.cpp  parser.h  parser_test.cpp  unary_operation.cpp  unary_operation.h  variable.cpp  variable.h
test/: function_generator.py
